--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -137,7 +137,7 @@
                 end_date: end_date,
             };
 
-            fetch('/chart-parameters', {
+            fetch('/make-analysis', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
